<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Task Scheduler</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_title">Title</string>
    <string name="hint_body">Task Description</string>
    <string name="dvu_header">Day</string>
    <string name="wvu_header">W</string>
    <string name="mvu_header">Month</string>
    <string name="quarter_past">15</string>
    <string name="half_past">30</string>
    <string name="quarter_to">45</string>
    <string name="noon">12</string>
    <string name="meeting">msp meeting</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="rec">End Time: </string>
    <string name="title_activity_new_task">NewTaskActivity</string>
    <string name="pick_time">Pick time</string>
    <string name="aboutus">About Us</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="OK">Notified</string>
    <string name="aboutUsDetail">Team Members: Hasan, Nahin, Feroz, Elena &amp; Robin</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>
    <string name="rec_prompt">Recurrence Type:</string>
    <string name="notify_before">Notify before (mins):</string>
    <string name="okay">  OK  </string>
        <string name="task_description">Task description</string>
    <string name="task_duration">Task duration</string>
    <string name="cancel">Cancel</string>
  
    <string-array name="rec_arrays">
        <item>Once</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string name="not_prompt">Notification Type :</string>

    <string-array name="not_arrays">
        <item>none</item>
        <item>Bar</item>
        <item>Alarm</item>
    </string-array>

    <string name="title_activity_delete_task">Delete Task</string>

</resources>