<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10sp" >

    <TextView
        android:id="@+id/task_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_description"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/man_red" />

    <TextView
        android:id="@+id/task_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_duration"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/man_gray" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/edit_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit" />

        <Button
            android:id="@+id/delete_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />

        <Button
            android:id="@+id/cancel_btn"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>